--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@
     <script src="js/states/MainMenu.js" type="text/javascript"></script>
     <script src="js/states/Game.js" type="text/javascript"></script>
     <script src="js/classes/Level.js" type="text/javascript"></script>
-    <script src="js/classes/Hud.js" type="text/javascript"></script>
     <script src="js/classes/Player.js" type="text/javascript"></script>
     <script src="js/classes/Ground.js" type="text/javascript"></script>
+    <script src="js/classes/Rock.js" type="text/javascript"></script>
+    <script src="js/classes/RockGroup.js" type="text/javascript"></script>
     <script src="js/flappyplane.js" type="text/javascript"></script>
 </body>
 </html>
