--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <script src="js/states/Preloader.js" type="text/javascript"></script>
     <script src="js/states/MainMenu.js" type="text/javascript"></script>
     <script src="js/states/Game.js" type="text/javascript"></script>
+    <script src="js/states/Gameover.js" type="text/javascript"></script>
     <script src="js/classes/Player.js" type="text/javascript"></script>
     <script src="js/classes/Ground.js" type="text/javascript"></script>
     <script src="js/classes/Rock.js" type="text/javascript"></script>
