Remove autoscroll method for ground

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/classes/Ground.js" type="text/javascript"></script>
     <script src="js/classes/Rock.js" type="text/javascript"></script>
     <script src="js/classes/RockGroup.js" type="text/javascript"></script>
+    <script src="js/classes/GroundGroup.js" type="text/javascript"></script>
     <script src="js/flappyplane.js" type="text/javascript"></script>
 </body>
 </html>
